// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.lang;

import "mojo/lang/lang.proto";

option go_package = "github.com/mojo-lang/lang/go/pkg/mojo/lang;lang";
option java_multiple_files = true;
option java_outer_classname = "ImportProto";
option java_package = "org.mojolang.mojo.lang";

message Import {
    string package_name = 7;
    repeated Identifier identifiers = 13;
}