// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.lang;

import "mojo/lang/lang.proto";

option go_package = "github.com/mojo-lang/lang/go/pkg/mojo/lang;lang";
option java_multiple_files = true;
option java_outer_classname = "TermProto";
option java_package = "org.mojolang.mojo.lang";

message Term {
    Position start_position = 1;
    Position end_position = 2;
    string type = 5;
    string value = 6;
    repeated Term terms = 15;
}